--- a/css/style.css
+++ b/css/style.css
@@ -4,12 +4,12 @@ Author URL: http://w3layouts.com
 License: Creative Commons Attribution 3.0 Unported
 License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
-h4, h5, h6,
+h4, h6,
 h1, h2, h3 {margin-top: 0;}
 ul, ol {margin: 0;}
 p {margin: 0;}
 html, body{
-  font-family: 'DosisRegular';
+  /*font-family: 'DosisRegular';*/
    font-size: 100%;
    background:#fff; 
 }
@@ -21,49 +21,12 @@ html, body{
 	font-family: 'SintonyRegular';
     src:url(../fonts/Sintony-Regular-webfont.ttf) format('truetype');
 }
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-black.eot');
-  src: url('../fonts/lato/lato-black.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-black.woff') format('woff'), url('../fonts/lato/lato-black.ttf') format('truetype'), url('../fonts/lato/lato-black.svg#latoblack') format('svg');
-  font-weight: 900;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-bold.eot');
-  src: url('../fonts/lato/lato-bold.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-bold.woff') format('woff'), url('../fonts/lato/lato-bold.ttf') format('truetype'), url('../fonts/lato/lato-bold.svg#latobold') format('svg');
-  font-weight: bold;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-bolditalic.eot');
-  src: url('../fonts/lato/lato-bolditalic.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-bolditalic.woff') format('woff'), url('../fonts/lato/lato-bolditalic.ttf') format('truetype'), url('../fonts/lato/lato-bolditalic.svg#latobold-italic') format('svg');
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-italic.eot');
-  src: url('../fonts/lato/lato-italic.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-italic.woff') format('woff'), url('../fonts/lato/lato-italic.ttf') format('truetype'), url('../fonts/lato/lato-italic.svg#latoitalic') format('svg');
-  font-weight: normal;
-  font-style: italic;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-light.eot');
-  src: url('../fonts/lato/lato-light.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-light.woff') format('woff'), url('../fonts/lato/lato-light.ttf') format('truetype'), url('../fonts/lato/lato-light.svg#latolight') format('svg');
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Lato';
-  src: url('../fonts/lato/lato-regular.eot');
-  src: url('../fonts/lato/lato-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/lato/lato-regular.woff') format('woff'), url('../fonts/lato/lato-regular.ttf') format('truetype'), url('../fonts/lato/lato-regular.svg#latoregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
+a {
+  color: #a89574;
 }
 a:hover {
+  color: #a89574;
+  text-decoration: none;
   transition: 0.5s all;
   -webkit-transition: 0.5s all;
   -moz-transition: 0.5s all;
@@ -75,11 +38,11 @@ a:hover {
 }
 .logo {
   float: left;
-  width: 50%;
+  width: 40%;
 }
 .head-right {
   float: right;
-  width: 50%;
+  width: 60%;
 }
 span.menu {
   display: none;
@@ -177,7 +140,7 @@ span.logo-clr {
 	position: absolute;
 	top: 100%;
 	content: attr(data-hover);
-	font-weight: 700;
+	font-weight: 500;
 	-webkit-transform: translate3d(0,0,0);
 	-moz-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
@@ -621,7 +584,7 @@ div#portfoliolist {
 /*--process end here--*/
 /*--footer start here--*/
 .footer {
-  padding: 2em 0em 2em 0em;
+  padding: 1em 0em 1em 0em;
   background:#393939;
 }
 .footer-news h5 {
@@ -699,14 +662,14 @@ ul.ftr-socialicons li a.print:hover {
   background-position: -69px -47px;
 }
 .foter-bottom p.footer-copyrts {
-  font-size: 1em;
+  font-size: 10pt;
   font-weight: 400;
   color: #fff;
   text-align: center;
   font-family: 'SintonyRegular';
 }
 .foter-bottom p.footer-copyrts a{
-  font-size: 1em;
+  font-size: 10pt;
   font-weight: 400;
   color: #a89574;
 }
@@ -738,8 +701,18 @@ ul.ftr-socialicons li a.print:hover {
   font-size: 1em;
   font-weight: 400;
   color: #818181;
-  width: 60%;
+  width: 80%;
   margin: 0 auto;
+}
+.about-wedo {
+  color: #818181;
+}
+.about-wedo h4 {
+  font-size: 1.3em;
+}
+.about-wedo h5 {
+  margin-top: 1;
+  font-size: 1em;
 }
 .about-wedo-right h4 a{
   font-size: 1.1em;
@@ -937,7 +910,7 @@ ul.ftr-socialicons li a.print:hover {
   padding: 0.51em 2em 0.51em 2em;
   border: none;
   border-radius: 0.4em 0.4em 0.4em 0.4em;
-  background: #a89574;
+  background: #767676;
   outline:none;
   margin: 0em 0em 0em 1em;
 }
@@ -1045,7 +1018,7 @@ ul.ftr-socialicons li a.print:hover {
   width: 40%;
 }
 .head-right {
-  width: 60%;
+  width: 50%;
 }
 .logo h1 a {
   font-size: 0.8em;
@@ -1091,7 +1064,7 @@ h2.b-animate.b-from-left.b-delay03 {
   font-size: 1.3em;
 }
 .about-top p {
-  width: 80%;
+  width: 100%;
 }
 .feature-head p {
   width: 100%;
@@ -1157,7 +1130,7 @@ ul.res li a:hover,ul.res li a.active{
   font-size: 0.75em;
 }	
 .head-right {
-  width: 50%;
+  width: 70%;
 }
 .banner-main h2 {
   font-size: 1.5em;
@@ -1355,7 +1328,7 @@ h2.b-animate.b-from-left.b-delay03 {
   font-size: 1.4em;
 }
 .about-top p {
-  width: 92%;
+  width: 100%;
   font-size: 0.95em;
 }
 .about-wedo-right h4 a {
